gannotate current development
=============================

    ENHANCEMENTS:
        
        * The window and log pane now magically remember their size and
          position. This change introduces the gannotate.conf configuration
          file in your bazaar configuration directory, though at this point
          there is no reason for one to stick their nose in it.

gannotate 0.6.1 2005-10-31
==========================
    
    Happy Halloween!

    BUGFIXES:

        * Late-load gtk so it doesn't attempt connection with a local X server
          over ssh when running other bzr commands.

gannotate 0.6 2005-10-28
========================

    * First official release!
    * Why 0.6? Version numbering will follow bazaar-NG's until its API
      stabilizes.
