@@ -3,6 +3,8 @@ gannotate current development
 
     ENHANCEMENTS:
         
+        * New --line option. Jump directly to the specified line number.
+
         * The window and log pane now magically remember their size and
           position. This change introduces the gannotate.conf configuration
           file in your bazaar configuration directory, though at this point
